# agent-os

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agentos/: __init__.py  agent.py  boot.py  cli.py  guardrails.py  hitl.py  kernel.py  llm.py  registry.py  scheduler.py  server.py  task.py  tools.py  tracing.py
agentos/agents/: __init__.py  builtins.py  llm_agents.py
agentos/memory/: __init__.py  blackboard.py  context.py  embedders.py  long_term.py  semantic.py  short_term.py
agentos/static/: dashboard.html
agentos/toolpacks/: __init__.py  fs.py  github.py  shell.py  web.py
examples/: 01_hello_pipeline.py  02_priorities_and_deps.py  03_retries_and_timeout.py  04_tools_and_guardrails.py  05_custom_agent.py  06_claude_agent.py
tests/: test_agentos.py  test_claude_provider.py  test_concurrency.py  test_integration.py  test_llm.py  test_llm_agents.py  test_memory.py  test_server.py  test_toolpacks.py
