[project]
name = "agent-os"
version = "0.2.0"
description = "An operating system for cooperating agents: concurrent scheduler, layered memory, schema-validated tools, LLM providers, planning, HITL, guardrails, observability, and REST/CLI/dashboard interfaces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dhanush Shankar" }]
keywords = ["agents", "orchestration", "scheduler", "runtime", "ai"]
dependencies = []

[project.scripts]
agentos = "agentos.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["httpx>=0.27", "anthropic>=0.40"]
vector = ["httpx>=0.27"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27"]
integrations = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentos"]
# Ensure the dashboard HTML ships inside the wheel (data file, not a module).
force-include = { "agentos/static" = "agentos/static" }

[tool.pytest.ini_options]
testpaths = ["tests"]
